[package]
name = "my-sb-contracts"
version = "0.1.0"
edition = "2024"

[dependencies]
service-sdk = { tag = "0.4.2", git = "https://github.com/MyJetTools/service-sdk.git", features = [
    "my-service-bus",
    "macros",
] }

serde = { version = "*", features = ["derive"] }

prost = "*"
prost-types = "*"
